2014-10-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c: Don't include sys/ioctl.h.

	* info/infomap.c (fetch_user_maps): Don't print an error message 
	if ".infokey" wasn't found.  Report from Karl Berry.

2014-10-06  Ken Brown  <kbrown@cornell.edu> (tiny change)

	* system.h [O_BINARY && !__MSDOS__]: Don't redefine setmode if 
	it is already defined.

2014-10-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Invoking Info): Add examples with --node.
	* info/info.c (info_short_help): Help text changed.

	* doc/texinfo.texi (Node Line Requirements): Tweak wording to 
	avoid implying that a node name with normalized whitespace has 
	to be used in all circumstances.  Report by Vincent Belaïche 
	2014-08-21 (bug #43042).

2014-10-03  Ken Brown  <kbrown@cornell.edu> (tiny change)

	Changes to compile for Cygwin:
	* info/Makefile.am (LDADD): Add "$(LIBICONV)".
	* info/info-utils.c: Remove include of nl_types.h.

	* man/Makefile.am: Don't build infokey.1.

2014-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_move_to_next_xref) 
	(info_move_to_prev_xref): If an argument is given with C-u, go 
	forward or backward that number of references.
	* info/t/tab-argument.sh: New test.

	* info/info.c (info_short_help): Examples in help text changed.

2014-09-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_search, do_info_index_search): 
	Getting user input moved from do_info_index_search.

	* info/indices.c (next_index_match, info_next_index_match): 
	Function split out.
	(look_in_indices): Return value as intended.

	* info/indices.c, info/session.c (allfiles_node) 
	(info_all_files): Moved between files.
	* info/session.c (move_to_goal_column): Return type declared as 
	void.
	(info_dispatch_on_key): Return values as intended.

	* info/indices.c (report_index_match): Split out from 
	info_next_index_match.

	* info/indices.c (next_index_match): Don't take index argument; 